--- a/_publications/2018-12-08-BGC-net.md
+++ b/_publications/2018-12-08-BGC-net.md
@@ -1,14 +1,14 @@
 ---
 title: "Balance Gate Controlled Deep Neural Network"
 collection: publications
-permalink: /publication/2009-10-01-paper-title-number-1
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+permalink: /publication/2018-12-08-BGC-net
+excerpt: 'A balance gate controlled network that out-performs feed-forward neural network in various classification and regression tasks.'
 date: 2018-12-8
-venue: 'Journal 1'
+venue: 'Neurocomputing'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S0925231218310567?via%3Dihub'
 citation: 'Liu A, Laili Y. &quot;Balance Gate Controlled Deep Neural Network.&quot; <i>Neurocomputing</i>. 320(2018) 183-194.'
 ---
-This paper is about the number 1. The number 2 is left for future work.
+A balance gate controlled network that out-performs feed-forward neural network in various classification and regression tasks.
 
 [Download paper here](https://www.sciencedirect.com/science/article/pii/S0925231218310567?via%3Dihub)
 
