update research proposal

--- a/_publications/2019-09-05-AAC.md
+++ b/_publications/2019-09-05-AAC.md
@@ -1,5 +1,5 @@
 ---
-title: "Reinforcement Learning with Disentangled Exploration"
+title: "Reinforcement Learning with Disentangled Exploration (under review)"
 collection: publications
 permalink: /publication/2019-09-05-AAC
 excerpt: 'A novel continuous control RL algorithm that disentangle exploration and exploitation to get better performance in both dense and sparse reward tasks.'
