--- a/_publications/2019-09-25-P-UCT.md
+++ b/_publications/2019-09-25-P-UCT.md
@@ -1,5 +1,5 @@
 ---
-title: "Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search"
+title: "Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search (under review)"
 collection: publications
 permalink: /publication/2019-09-25-P-UCT
 excerpt: 'A novel parallel UCT algorithm with linear speedup and negligible performance loss.'
