--- a/_publications/2018-07-12-SFEN.md
+++ b/_publications/2018-07-12-SFEN.md
@@ -1,5 +1,5 @@
 ---
-title: "Finding Good State Representations for Reinforcement Learning"
+title: "Finding Good State Representations for Reinforcement Learning (revising paper)"
 collection: publications
 permalink: /publication/2018-07-12-SFEN
 excerpt: 'Built a learning model to extract the location of moving objects in visual RL tasks automatically without the need for supervision or labeled samples, which provide high-level state-representations that accelerate reinforcement learning significantly.'
