--- a/_publications/2019-09-25-P-UCT.md
+++ b/_publications/2019-09-25-P-UCT.md
@@ -4,12 +4,12 @@ collection: publications
 permalink: /publication/2019-09-25-P-UCT
 excerpt: 'A novel parallel UCT algorithm with linear speedup and negligible performance loss.'
 date: 2019-09-25
-venue: 'arXiv'
-paperurl: 'http://https://arxiv.org/abs/1810.11755'
+venue: 'ICLR 2020'
+paperurl: 'https://arxiv.org/abs/1810.11755'
 citation: 'Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>arXiv</i> 1810.11755.'
 ---
 A novel parallel UCT algorithm with linear speedup and negligible performance loss. (Submitted to ICLR 2020, under review, review scores: 8 6 8, tied top: 34/2594)
 
-[Download paper here](http://https://arxiv.org/pdf/1810.11755.pdf)
+[Download paper here](https://arxiv.org/pdf/1810.11755.pdf)
 
 Recommended citation: Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>arXiv</i> 1810.11755.
