--- a/_publications/2019-09-25-P-UCT.md
+++ b/_publications/2019-09-25-P-UCT.md
@@ -1,15 +1,15 @@
 ---
-title: "Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search (under review)"
+title: "Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search **Oral presentation**"
 collection: publications
 permalink: /publication/2019-09-25-P-UCT
 excerpt: 'A novel parallel UCT algorithm with linear speedup and negligible performance loss.'
 date: 2019-09-25
 venue: 'ICLR 2020'
-paperurl: 'https://arxiv.org/abs/1810.11755'
-citation: 'Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>arXiv</i> 1810.11755.'
+paperurl: 'https://openreview.net/pdf?id=BJlQtJSKDB'
+citation: 'Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>International Conference of Learning Representation (ICLR)</i>, 2020.'
 ---
-A novel parallel UCT algorithm with linear speedup and negligible performance loss. (Submitted to ICLR 2020, under review, review scores: 8 6 8, tied top: 34/2594)
+A novel parallel UCT algorithm with linear speedup and negligible performance loss. **Oral presentation 48/2594**
 
-[Download paper here](https://arxiv.org/pdf/1810.11755.pdf)
+[Download paper here](https://openreview.net/pdf?id=BJlQtJSKDB)
 
-Recommended citation: Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>arXiv</i> 1810.11755.
+Recommended citation: Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>International Conference of Learning Representation (ICLR)</i>, 2020.
