--- a/_publications/2019-09-25-P-UCT.md
+++ b/_publications/2019-09-25-P-UCT.md
@@ -1,5 +1,5 @@
 ---
-title: "Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search **Oral presentation**"
+title: "Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search (**Oral presentation**)"
 collection: publications
 permalink: /publication/2019-09-25-P-UCT
 excerpt: 'A novel parallel UCT algorithm with linear speedup and negligible performance loss.'
@@ -8,7 +8,7 @@ venue: 'ICLR 2020'
 paperurl: 'https://openreview.net/pdf?id=BJlQtJSKDB'
 citation: 'Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>International Conference of Learning Representation (ICLR)</i>, 2020.'
 ---
-A novel parallel UCT algorithm with linear speedup and negligible performance loss. **Oral presentation 48/2594**
+A novel parallel UCT algorithm with linear speedup and negligible performance loss. (**Oral presentation 48/2594**)
 
 [Download paper here](https://openreview.net/pdf?id=BJlQtJSKDB)
 
