--- a/_publications/2019-09-05-AAC.md
+++ b/_publications/2019-09-05-AAC.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Reinforcement Learning with Analogous Disentangled Exploration (under review)"
+title: "Deep Reinforcement Learning with Analogous Disentangled Exploration"
 collection: publications
 permalink: /publication/2019-09-05-AAC
 excerpt: 'A novel continuous control RL algorithm that disentangle exploration and exploitation to get better performance in both dense and sparse reward tasks.'
 date: 2019-09-25
 venue: 'AAMAS 2020'
-citation: 'Liu A, Liang Y, Van den Broeck G. &quot;Deep Reinforcement Learning with Analogous Disentangled Exploration.&quot; 2019.'
+citation: 'Liu A, Liang Y, Van den Broeck G. &quot;Deep Reinforcement Learning with Analogous Disentangled Exploration.&quot; <i>International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS)</i> 2020.'
 ---
-A novel continuous control RL algorithm that disentangle exploration and exploitation to get better performance in both dense and sparse reward tasks. (Submitted to AAAI 2020, under review)
+A novel continuous control RL algorithm that disentangle exploration and exploitation to get better performance in both dense and sparse reward tasks.
