--- a/_publications/2019-09-25-P-UCT.md
+++ b/_publications/2019-09-25-P-UCT.md
@@ -6,7 +6,7 @@ excerpt: 'A novel parallel UCT algorithm with linear speedup and negligible perf
 date: 2019-09-25
 venue: 'ICLR 2020'
 paperurl: 'https://openreview.net/pdf?id=BJlQtJSKDB'
-citation: 'Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>International Conference of Learning Representation (ICLR)</i>, 2020.'
+citation: 'Liu A, Chen J, Yu M, Zhai Y, Zhou X, Liu J. &quot;Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search.&quot; <i>International Conference on Learning Representation (ICLR)</i>, 2020.'
 ---
 A novel parallel UCT algorithm with linear speedup and negligible performance loss. (**Oral presentation 48/2594**)
 
